--- a/cacaboudin.html
+++ b/cacaboudin.html
@@ -1,4 +1,5 @@
 <h1>LOLILOL TA MAMAN</h1>
 
 <p>Mais en fait je fais jamais de push moi, comment on fait ? 
+Et je pull jamais non plus...
 C bizar parcke je vouah tt kan meme lol</p>
