--- a/cacaboudin.html
+++ b/cacaboudin.html
@@ -3,3 +3,5 @@
 <p>Mais en fait je fais jamais de push moi, comment on fait ? 
 Et je pull jamais non plus...
 C bizar parcke je vouah tt kan meme lol</p>
+
+<p>VAZY WESH MAIS FAUT FAIRE D'ABORD UN COMMIT PUIS UN PUSH BORDEL LOLOLOLO</p>
