--- a/cacaboudin.html
+++ b/cacaboudin.html
@@ -5,3 +5,5 @@ Et je pull jamais non plus...
 C bizar parcke je vouah tt kan meme lol</p>
 
 <p>VAZY WESH MAIS FAUT FAIRE D'ABORD UN COMMIT PUIS UN PUSH BORDEL LOLOLOLO</p>
+
+Mais je sais pas où c'est... On pourra faire un TP tous ensemble ? :D :D :D :D :D XD
