--- a/cacaboudin.html
+++ b/cacaboudin.html
@@ -9,3 +9,5 @@ C bizar parcke je vouah tt kan meme lol</p>
 Mais je sais pas où c'est... On pourra faire un TP tous ensemble ? :D :D :D :D :D XD
 
 Chè ap faut voir tasvu
+
+PFFF. Et le projet on s'y met quand ? :)
